<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.UpdateProfileActivity">

    <include
        layout="@layout/layout_background_image" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_margin="24dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/background_light"
            android:hint="@string/full_name_string"
            android:textColor="@android:color/primary_text_dark"
            android:textColorHint="#7A7B78"
            android:drawableStart="@drawable/ic_person_outline_black_24dp"
            android:drawablePadding="8dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fullName"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/background_light"
            android:hint="@string/email_address_string"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/primary_text_dark"
            android:textColorHint="#7A7B78"
            android:drawableStart="@drawable/ic_public_black_24dp"
            android:drawablePadding="8dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/contactNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailAddress"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/background_light"
            android:hint="@string/contact_no_string"
            android:inputType="phone"
            android:textColor="@android:color/primary_text_dark"
            android:textColorHint="#7A7B78"
            android:drawableStart="@drawable/ic_call_black_24dp"
            android:drawablePadding="8dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contactNo"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/background_light"
            android:hint="@string/password_string"
            android:inputType="textPassword"
            android:textColor="@android:color/primary_text_dark"
            android:textColorHint="#7A7B78"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="8dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/background_light"
            android:hint="@string/confirm_password_string"
            android:textColor="@android:color/primary_text_dark"
            android:inputType="textPassword"
            android:textColorHint="#7A7B78"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="8dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateUserDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/drawable_button_update_profile"
            android:textColor="@color/colorPrimary"
            android:text="@string/update_profile_string"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

    </RelativeLayout>

</RelativeLayout>