<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.ProfileActivity">

    <include
        layout="@layout/layout_background_image" />

    <include
        layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name_string"
            android:textColor="@android:color/primary_text_dark"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_string"
            android:layout_marginTop="4dp"
            android:textColor="@android:color/primary_text_dark"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address_string"
            android:layout_marginTop="24dp"
            android:textColor="@android:color/primary_text_dark"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address_string"
            android:layout_marginTop="4dp"
            android:textColor="@android:color/primary_text_dark"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_string"
            android:layout_marginTop="24dp"
            android:textColor="@android:color/primary_text_dark"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_string"
            android:layout_marginTop="4dp"
            android:textColor="@android:color/primary_text_dark"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

    </LinearLayout>

</RelativeLayout>