<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include
        layout="@layout/layout_background_image" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title_string"
            android:textColor="@android:color/primary_text_dark"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textAllCaps="true"
            android:fontFamily="casual"
            android:layout_marginTop="64dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_light"
                android:hint="@string/username_string"
                android:textColor="@android:color/primary_text_dark"
                android:textColorHint="#7A7B78"
                android:drawableStart="@drawable/ic_person_outline_black_24dp"
                android:drawablePadding="8dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:layout_marginTop="48dp"
                android:backgroundTint="@android:color/background_light"
                android:hint="@string/password_string"
                android:inputType="textPassword"
                android:textColor="@android:color/primary_text_dark"
                android:textColorHint="#7A7B78"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="8dp" />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/forgot_password_string"
                android:textColor="@android:color/primary_text_dark"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:layout_below="@+id/password"
                android:layout_marginTop="32dp" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="72dp"
            android:padding="16dp"
            android:background="@drawable/drawable_button_disabled"
            android:text="@string/login_button_2_string"
            android:enabled="false"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp" />

    </RelativeLayout>

</RelativeLayout>