<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <include
        layout="@layout/layout_background_image" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title_string"
            android:textColor="@android:color/primary_text_dark"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textAllCaps="true"
            android:fontFamily="casual"
            android:layout_marginTop="64dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_light"
                android:hint="@string/full_name_string"
                android:textColor="@android:color/primary_text_dark"
                android:textColorHint="#7A7B78"
                android:drawableStart="@drawable/ic_person_outline_black_24dp"
                android:drawablePadding="8dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fullName"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/background_light"
                android:hint="@string/email_address_string"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/primary_text_dark"
                android:textColorHint="#7A7B78"
                android:drawableStart="@drawable/ic_public_black_24dp"
                android:drawablePadding="8dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/contactNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailAddress"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/background_light"
                android:hint="@string/contact_no_string"
                android:inputType="phone"
                android:textColor="@android:color/primary_text_dark"
                android:textColorHint="#7A7B78"
                android:drawableStart="@drawable/ic_call_black_24dp"
                android:drawablePadding="8dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contactNo"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/background_light"
                android:hint="@string/password_string"
                android:inputType="textPassword"
                android:textColor="@android:color/primary_text_dark"
                android:textColorHint="#7A7B78"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="8dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/background_light"
                android:hint="@string/confirm_password_string"
                android:textColor="@android:color/primary_text_dark"
                android:inputType="textPassword"
                android:textColorHint="#7A7B78"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="8dp" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="72dp"
            android:padding="16dp"
            android:enabled="false"
            android:background="@drawable/drawable_button_disabled"
            android:text="@string/register_button_string"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark"
        android:visibility="gone"
        android:alpha="0.4">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="@android:color/background_light"
            android:backgroundTint="@android:color/background_light" />

    </RelativeLayout>

</RelativeLayout>