<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Payments.PaymentsFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/total_cost_string"
        android:textColor="@android:color/primary_text_dark"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="$0"
        android:layout_below="@+id/title"
        android:textColor="@android:color/primary_text_dark"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/paymentOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cost"
        android:layout_marginTop="32dp"
        android:textAllCaps="true"
        android:text="@string/payment_options_string"
        android:textColor="@android:color/primary_text_dark"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paymentOptions"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@android:color/background_light"
        app:cardCornerRadius="5dp"
        app:contentPadding="16dp"
        android:layout_marginBottom="16dp"
        app:cardUseCompatPadding="true">

        <RadioGroup
            android:id="@+id/payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/cardPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_with_card_string"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textColor="@color/colorPrimary"
                android:buttonTint="@color/colorPrimary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.34dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/drawable_view" />

            <RadioButton
                android:id="@+id/creditPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_with_credit_string"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textColor="@color/colorPrimary"
                android:buttonTint="@color/colorPrimary" />

        </RadioGroup>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>